Zadaci za samostalan rad/ZSR4/Z1/.gcc.out
/rhome/j/jhasanovic1/workspace/OR/ZSR4/Z1/main.c: In function ‘main’:
/rhome/j/jhasanovic1/workspace/OR/ZSR4/Z1/main.c:15:2: error: ‘else’ without a previous ‘if’
  else if(i%2==0)
  ^~~~
